--- a/index.template.ejs
+++ b/index.template.ejs
@@ -3,8 +3,8 @@
 <head>
 
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Kfitzi.io</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.cssls">
+    <title>Hack Your Mom</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
